<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.magiccode.maven</groupId>
	<artifactId>spring-dockerator-plugin</artifactId>
	<version>0.0.4-SNAPSHOT</version>
	<packaging>maven-plugin</packaging>

	<name>Spring Dockerator Plugin</name>
	<description>A Maven plugin to generate Docker Compose files for Spring Boot
		applications.</description>
	<url>http://www.magiccode.net</url>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.release>17</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<maven-project.version>2.2.1</maven-project.version>
		<maven-plugin-api.version>3.9.9</maven-plugin-api.version>
		<maven-plugin-annotations.version>3.15.1</maven-plugin-annotations.version>
		<lombok.version>1.18.36</lombok.version>
		<log4j.version>2.24.1</log4j.version>
		<additionalparam>-Xdoclint:none</additionalparam>
	</properties>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>CodeWeazle</id>
			<name>Volker Karlmeier</name>
			<email>volker@magiccode.net</email>
			<organization>MagicCode</organization>
			<organizationUrl>http://www.magiccode.net</organizationUrl>
		</developer>
	</developers>

	<dependencies>
		<!-- Dependency for YAML processing -->
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>${maven-plugin-api.version}</version>
			<scope>provided</scope>
		</dependency>
		<!--
		https://mvnrepository.com/artifact/org.apache.maven.plugin-tools/maven-plugin-annotations -->
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<version>${maven-plugin-annotations.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.maven/maven-project -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-project</artifactId>
			<version>${maven-project.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.17.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<!-- Maven Plugin Plugin for building the Maven Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
				<version>3.9.0</version>
				<configuration>
					<goalPrefix>spring-dockerator</goalPrefix>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>descriptor</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Compiler Plugin to set Java version -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
	                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
	                    <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
					</compilerArgs>				
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-gpg-plugin</artifactId>
				<version>3.2.7</version>
				<configuration>
					<keyname>CDB4C379E59BDB0637A37786E38088ACA8297A36</keyname>
					<passphraseServerId>CDB4C379E59BDB0637A37786E38088ACA8297A36</passphraseServerId>
					<gpgArguments>
						<arg>--pinentry-mode</arg>
						<arg>loopback</arg>
					</gpgArguments>
				</configuration>
				<executions>
					<execution>
						<id>sign-artifacts</id>
						<phase>verify</phase>
						<goals>
							<goal>sign</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.sonatype.central</groupId>
				<artifactId>central-publishing-maven-plugin</artifactId>
				<version>0.6.0</version>
          		<extensions>true</extensions>
				<configuration>
					<publishingServerId>central</publishingServerId>
					<tokenEnabled>true</tokenEnabled>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.18.20.0</version>
				<configuration>
					<sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
					<outputDirectory>${delombok.output}</outputDirectory>
					<addOutputDirectory>false</addOutputDirectory>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
					</execution>
				</executions>
				<dependencies>
                    <dependency>
                        <groupId>org.projectlombok</groupId>
                        <artifactId>lombok</artifactId>
                        <version>${lombok.version}</version>
                    </dependency>
                </dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.11.1</version>
				<configuration>
					<show>public</show>
					<nohelp>true</nohelp>
					<sourcepath>${delombok.output}</sourcepath>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>javadoc-jar</id>
						<goals>
							<goal>jar</goal>
						</goals>
						<configuration>
							<includeDependencySources>true</includeDependencySources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.0</version>
				<configuration>
					<stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
					<show>public</show>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<scm>
		<connection>
			scm:git:git://github.com/CodeWeazle/spring-dockerator-plugin.git</connection>
		<developerConnection>
			scm:git:ssh://github.com:CodeWeazle/spring-dockerator-plugin.git</developerConnection>
		<url>https://maven.pkg.github.com/CodeWeazle/spring-dockerator-plugin</url>
	</scm>

</project>
